parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON global_scope var_declarations functions main END
Rule 2     global_scope -> empty
Rule 3     functions -> functions function
Rule 4     functions -> function
Rule 5     functions -> empty
Rule 6     function -> FUNCTION function_signature block
Rule 7     function_signature -> simple_type ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
Rule 8     function_signature -> VOID ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
Rule 9     return -> RETURN expressions SEMICOLON
Rule 10    function_1 -> empty
Rule 11    main -> MAIN LPAREN RPAREN main_scope var_declarations block
Rule 12    main_scope -> empty
Rule 13    var_declarations -> var_declaration_list
Rule 14    var_declarations -> empty
Rule 15    var_declaration_list -> var_declaration var_declarations
Rule 16    var_declaration -> VARIABLE open_var_declaration simple_type variables SEMICOLON close_var_declaration
Rule 17    open_var_declaration -> empty
Rule 18    close_var_declaration -> empty
Rule 19    variables -> variable
Rule 20    variables -> variable COMMA variables
Rule 21    variable -> ID
Rule 22    variable -> ID LBRACK expression RBRACK
Rule 23    variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK
Rule 24    parameters -> parameters COMMA parameter
Rule 25    parameters -> parameter
Rule 26    parameters -> empty
Rule 27    parameter -> simple_type ID
Rule 28    block -> LBRACE block2 RBRACE
Rule 29    block2 -> block3
Rule 30    block2 -> empty
Rule 31    block3 -> statement block2
Rule 32    statement -> special_func
Rule 33    statement -> assingation
Rule 34    statement -> for
Rule 35    statement -> do_while
Rule 36    statement -> while
Rule 37    statement -> if_else
Rule 38    statement -> invocation
Rule 39    statement -> if
Rule 40    statement -> print
Rule 41    statement -> read
Rule 42    special_func -> gen_key
Rule 43    special_func -> encrypt
Rule 44    special_func -> decrypt
Rule 45    special_func -> sha_256
Rule 46    special_func -> random_salt
Rule 47    special_func -> hmac
Rule 48    hmac -> HMAC LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
Rule 49    random_salt -> RANDOM_SALT LPAREN CTEI RPAREN SPECIAL ID SEMICOLON
Rule 50    sha_256 -> SHA_256 LPAREN ID RPAREN SPECIAL ID SEMICOLON
Rule 51    gen_key -> GENKEY LPAREN RPAREN SPECIAL ID SEMICOLON
Rule 52    encrypt -> ENCRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
Rule 53    decrypt -> DECRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
Rule 54    read -> READ LPAREN ID RPAREN SEMICOLON
Rule 55    assing_to_call -> variable ASSIGN invocation
Rule 56    do_while -> DO breadcrumb block WHILE LPAREN expression RPAREN gotot SEMICOLON
Rule 57    for -> FOR LPAREN ID for_1 ASSIGN expression for_2 FROM expression RPAREN for_3 DO block for_4
Rule 58    for_1 -> empty
Rule 59    for_2 -> empty
Rule 60    for_3 -> empty
Rule 61    for_4 -> empty
Rule 62    while -> WHILE breadcrumb LPAREN expression RPAREN gotof block
Rule 63    breadcrumb -> empty
Rule 64    if -> IF LPAREN expression RPAREN gotof block
Rule 65    if_else -> IF LPAREN expression RPAREN gotof block ELSE goto block
Rule 66    gotot -> empty
Rule 67    goto -> empty
Rule 68    gotof -> empty
Rule 69    variable_list -> variable
Rule 70    variable_list -> variable_list COMMA variable
Rule 71    invocation -> ID invocation_1 LPAREN invocation_2 expressions RPAREN invocation_5 SEMICOLON invocation_6
Rule 72    invocation_1 -> empty
Rule 73    invocation_2 -> empty
Rule 74    invocation_3 -> empty
Rule 75    invocation_4 -> empty
Rule 76    invocation_5 -> empty
Rule 77    invocation_6 -> empty
Rule 78    expressions -> expressions COMMA invocation_4 expression invocation_3
Rule 79    expressions -> expression invocation_3
Rule 80    expressions -> empty
Rule 81    expression -> t_expression
Rule 82    expression -> NOT t_expression
Rule 83    print -> PRINT LPAREN print_arguments RPAREN SEMICOLON
Rule 84    print_arguments -> print_argument
Rule 85    print_arguments -> print_arguments COMMA print_argument
Rule 86    print_argument -> CTES
Rule 87    print_argument -> expression
Rule 88    assingation -> variable ASSIGN expression SEMICOLON
Rule 89    t_expression -> g_expression
Rule 90    t_expression -> t_expression boolean_operator g_expression
Rule 91    g_expression -> m_expression
Rule 92    g_expression -> g_expression comparison_operator m_expression
Rule 93    m_expression -> term
Rule 94    m_expression -> m_expression addition_operator term
Rule 95    term -> factor
Rule 96    term -> term multiplication_operator factor
Rule 97    factor -> variable
Rule 98    factor -> cte
Rule 99    factor -> invocation
Rule 100   factor -> expression_parenthesis
Rule 101   expression_parenthesis -> LPAREN expression RPAREN
Rule 102   comparison_operator -> LESS
Rule 103   comparison_operator -> GREATER
Rule 104   comparison_operator -> EQUALS
Rule 105   comparison_operator -> NOTEQUAL
Rule 106   comparison_operator -> GREATERTHAN
Rule 107   comparison_operator -> LESSTHAN
Rule 108   addition_operator -> PLUS
Rule 109   addition_operator -> MINUS
Rule 110   boolean_operator -> AND
Rule 111   boolean_operator -> OR
Rule 112   multiplication_operator -> TIMES
Rule 113   multiplication_operator -> DIVIDE
Rule 114   simple_type -> INT
Rule 115   simple_type -> FLOAT
Rule 116   simple_type -> CHAR
Rule 117   simple_type -> BOOLEAN
Rule 118   simple_type -> STRING
Rule 119   cte -> CTEI
Rule 120   cte -> CTEF
Rule 121   cte -> CTEC
Rule 122   cte -> CTEB
Rule 123   cte -> CTES
Rule 124   empty -> <empty>

Terminals, with rules where they appear

AND                  : 110
ASSIGN               : 55 57 88
BOOLEAN              : 117
CHAR                 : 116
COLON                : 
COMMA                : 20 24 48 52 53 70 78 85
COMMENT              : 
CTEB                 : 122
CTEC                 : 121
CTEF                 : 120
CTEI                 : 49 119
CTES                 : 86 123
DECRYPT              : 53
DIVIDE               : 113
DO                   : 56 57
ELSE                 : 65
ENCRYPT              : 52
END                  : 1
EQUALS               : 104
FLOAT                : 115
FOR                  : 57
FROM                 : 57
FUNCTION             : 6
GENKEY               : 51
GREATER              : 103
GREATERTHAN          : 106
HMAC                 : 48
ID                   : 1 7 8 21 22 23 27 48 48 48 49 50 50 51 52 52 52 53 53 53 54 57 71
IF                   : 64 65
INT                  : 114
LBRACE               : 28
LBRACK               : 22 23 23
LESS                 : 102
LESSTHAN             : 107
LPAREN               : 7 8 11 48 49 50 51 52 53 54 56 57 62 64 65 71 83 101
MAIN                 : 11
MINUS                : 109
NOT                  : 82
NOTEQUAL             : 105
OR                   : 111
PLUS                 : 108
PRINT                : 83
PROGRAM              : 1
RANDOM_SALT          : 49
RBRACE               : 28
RBRACK               : 22 23 23
READ                 : 54
RETURN               : 9
RPAREN               : 7 8 11 48 49 50 51 52 53 54 56 57 62 64 65 71 83 101
SEMICOLON            : 1 9 16 48 49 50 51 52 53 54 56 71 83 88
SHA_256              : 50
SPECIAL              : 48 49 50 51 52 53
STRING               : 118
THEN                 : 
TIMES                : 112
VARIABLE             : 16
VOID                 : 8
WHILE                : 56 62
error                : 

Nonterminals, with rules where they appear

addition_operator    : 94
assing_to_call       : 
assingation          : 33
block                : 6 11 56 57 62 64 65 65
block2               : 28 31
block3               : 29
boolean_operator     : 90
breadcrumb           : 56 62
close_var_declaration : 7 8 16
comparison_operator  : 92
cte                  : 98
decrypt              : 44
do_while             : 35
empty                : 2 5 10 12 14 17 18 26 30 58 59 60 61 63 66 67 68 72 73 74 75 76 77 80
encrypt              : 43
expression           : 22 23 23 56 57 57 62 64 65 78 79 87 88 101
expression_parenthesis : 100
expressions          : 9 71 78
factor               : 95 96
for                  : 34
for_1                : 57
for_2                : 57
for_3                : 57
for_4                : 57
function             : 3 4
function_1           : 7 8
function_signature   : 6
functions            : 1 3
g_expression         : 89 90 92
gen_key              : 42
global_scope         : 1
goto                 : 65
gotof                : 62 64 65
gotot                : 56
hmac                 : 47
if                   : 39
if_else              : 37
invocation           : 38 55 99
invocation_1         : 71
invocation_2         : 71
invocation_3         : 78 79
invocation_4         : 78
invocation_5         : 71
invocation_6         : 71
m_expression         : 91 92 94
main                 : 1
main_scope           : 11
multiplication_operator : 96
open_var_declaration : 7 8 16
parameter            : 24 25
parameters           : 7 8 24
print                : 40
print_argument       : 84 85
print_arguments      : 83 85
program              : 0
random_salt          : 46
read                 : 41
return               : 
sha_256              : 45
simple_type          : 7 16 27
special_func         : 32
statement            : 31
t_expression         : 81 82 90
term                 : 93 94 96
var_declaration      : 15
var_declaration_list : 13
var_declarations     : 1 7 8 11 15
variable             : 19 20 55 69 70 88 97
variable_list        : 70
variables            : 16 20
while                : 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON global_scope var_declarations functions main END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON global_scope var_declarations functions main END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON global_scope var_declarations functions main END

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . global_scope var_declarations functions main END
    (2) global_scope -> . empty
    (124) empty -> .

    VARIABLE        reduce using rule 124 (empty -> .)
    FUNCTION        reduce using rule 124 (empty -> .)
    MAIN            reduce using rule 124 (empty -> .)

    global_scope                   shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) program -> PROGRAM ID SEMICOLON global_scope . var_declarations functions main END
    (13) var_declarations -> . var_declaration_list
    (14) var_declarations -> . empty
    (15) var_declaration_list -> . var_declaration var_declarations
    (124) empty -> .
    (16) var_declaration -> . VARIABLE open_var_declaration simple_type variables SEMICOLON close_var_declaration

    FUNCTION        reduce using rule 124 (empty -> .)
    MAIN            reduce using rule 124 (empty -> .)
    VARIABLE        shift and go to state 11

    var_declarations               shift and go to state 7
    var_declaration_list           shift and go to state 8
    empty                          shift and go to state 9
    var_declaration                shift and go to state 10

state 6

    (2) global_scope -> empty .

    VARIABLE        reduce using rule 2 (global_scope -> empty .)
    FUNCTION        reduce using rule 2 (global_scope -> empty .)
    MAIN            reduce using rule 2 (global_scope -> empty .)


state 7

    (1) program -> PROGRAM ID SEMICOLON global_scope var_declarations . functions main END
    (3) functions -> . functions function
    (4) functions -> . function
    (5) functions -> . empty
    (6) function -> . FUNCTION function_signature block
    (124) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 15
    MAIN            reduce using rule 124 (empty -> .)

  ! FUNCTION        [ reduce using rule 124 (empty -> .) ]

    functions                      shift and go to state 12
    function                       shift and go to state 13
    empty                          shift and go to state 14

state 8

    (13) var_declarations -> var_declaration_list .

    FUNCTION        reduce using rule 13 (var_declarations -> var_declaration_list .)
    MAIN            reduce using rule 13 (var_declarations -> var_declaration_list .)
    LBRACE          reduce using rule 13 (var_declarations -> var_declaration_list .)


state 9

    (14) var_declarations -> empty .

    FUNCTION        reduce using rule 14 (var_declarations -> empty .)
    MAIN            reduce using rule 14 (var_declarations -> empty .)
    LBRACE          reduce using rule 14 (var_declarations -> empty .)


state 10

    (15) var_declaration_list -> var_declaration . var_declarations
    (13) var_declarations -> . var_declaration_list
    (14) var_declarations -> . empty
    (15) var_declaration_list -> . var_declaration var_declarations
    (124) empty -> .
    (16) var_declaration -> . VARIABLE open_var_declaration simple_type variables SEMICOLON close_var_declaration

    FUNCTION        reduce using rule 124 (empty -> .)
    MAIN            reduce using rule 124 (empty -> .)
    LBRACE          reduce using rule 124 (empty -> .)
    VARIABLE        shift and go to state 11

    var_declaration                shift and go to state 10
    var_declarations               shift and go to state 16
    var_declaration_list           shift and go to state 8
    empty                          shift and go to state 9

state 11

    (16) var_declaration -> VARIABLE . open_var_declaration simple_type variables SEMICOLON close_var_declaration
    (17) open_var_declaration -> . empty
    (124) empty -> .

    INT             reduce using rule 124 (empty -> .)
    FLOAT           reduce using rule 124 (empty -> .)
    CHAR            reduce using rule 124 (empty -> .)
    BOOLEAN         reduce using rule 124 (empty -> .)
    STRING          reduce using rule 124 (empty -> .)

    open_var_declaration           shift and go to state 17
    empty                          shift and go to state 18

state 12

    (1) program -> PROGRAM ID SEMICOLON global_scope var_declarations functions . main END
    (3) functions -> functions . function
    (11) main -> . MAIN LPAREN RPAREN main_scope var_declarations block
    (6) function -> . FUNCTION function_signature block

    MAIN            shift and go to state 21
    FUNCTION        shift and go to state 15

    main                           shift and go to state 19
    function                       shift and go to state 20

state 13

    (4) functions -> function .

    MAIN            reduce using rule 4 (functions -> function .)
    FUNCTION        reduce using rule 4 (functions -> function .)


state 14

    (5) functions -> empty .

    MAIN            reduce using rule 5 (functions -> empty .)
    FUNCTION        reduce using rule 5 (functions -> empty .)


state 15

    (6) function -> FUNCTION . function_signature block
    (7) function_signature -> . simple_type ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
    (8) function_signature -> . VOID ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
    (114) simple_type -> . INT
    (115) simple_type -> . FLOAT
    (116) simple_type -> . CHAR
    (117) simple_type -> . BOOLEAN
    (118) simple_type -> . STRING

    VOID            shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29

    function_signature             shift and go to state 22
    simple_type                    shift and go to state 23

state 16

    (15) var_declaration_list -> var_declaration var_declarations .

    FUNCTION        reduce using rule 15 (var_declaration_list -> var_declaration var_declarations .)
    MAIN            reduce using rule 15 (var_declaration_list -> var_declaration var_declarations .)
    LBRACE          reduce using rule 15 (var_declaration_list -> var_declaration var_declarations .)


state 17

    (16) var_declaration -> VARIABLE open_var_declaration . simple_type variables SEMICOLON close_var_declaration
    (114) simple_type -> . INT
    (115) simple_type -> . FLOAT
    (116) simple_type -> . CHAR
    (117) simple_type -> . BOOLEAN
    (118) simple_type -> . STRING

    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29

    simple_type                    shift and go to state 30

state 18

    (17) open_var_declaration -> empty .

    INT             reduce using rule 17 (open_var_declaration -> empty .)
    FLOAT           reduce using rule 17 (open_var_declaration -> empty .)
    CHAR            reduce using rule 17 (open_var_declaration -> empty .)
    BOOLEAN         reduce using rule 17 (open_var_declaration -> empty .)
    STRING          reduce using rule 17 (open_var_declaration -> empty .)
    COMMA           reduce using rule 17 (open_var_declaration -> empty .)
    RPAREN          reduce using rule 17 (open_var_declaration -> empty .)


state 19

    (1) program -> PROGRAM ID SEMICOLON global_scope var_declarations functions main . END

    END             shift and go to state 31


state 20

    (3) functions -> functions function .

    MAIN            reduce using rule 3 (functions -> functions function .)
    FUNCTION        reduce using rule 3 (functions -> functions function .)


state 21

    (11) main -> MAIN . LPAREN RPAREN main_scope var_declarations block

    LPAREN          shift and go to state 32


state 22

    (6) function -> FUNCTION function_signature . block
    (28) block -> . LBRACE block2 RBRACE

    LBRACE          shift and go to state 34

    block                          shift and go to state 33

state 23

    (7) function_signature -> simple_type . ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations

    ID              shift and go to state 35


state 24

    (8) function_signature -> VOID . ID function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations

    ID              shift and go to state 36


state 25

    (114) simple_type -> INT .

    ID              reduce using rule 114 (simple_type -> INT .)


state 26

    (115) simple_type -> FLOAT .

    ID              reduce using rule 115 (simple_type -> FLOAT .)


state 27

    (116) simple_type -> CHAR .

    ID              reduce using rule 116 (simple_type -> CHAR .)


state 28

    (117) simple_type -> BOOLEAN .

    ID              reduce using rule 117 (simple_type -> BOOLEAN .)


state 29

    (118) simple_type -> STRING .

    ID              reduce using rule 118 (simple_type -> STRING .)


state 30

    (16) var_declaration -> VARIABLE open_var_declaration simple_type . variables SEMICOLON close_var_declaration
    (19) variables -> . variable
    (20) variables -> . variable COMMA variables
    (21) variable -> . ID
    (22) variable -> . ID LBRACK expression RBRACK
    (23) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK

    ID              shift and go to state 39

    variables                      shift and go to state 37
    variable                       shift and go to state 38

state 31

    (1) program -> PROGRAM ID SEMICOLON global_scope var_declarations functions main END .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON global_scope var_declarations functions main END .)


state 32

    (11) main -> MAIN LPAREN . RPAREN main_scope var_declarations block

    RPAREN          shift and go to state 40


state 33

    (6) function -> FUNCTION function_signature block .

    MAIN            reduce using rule 6 (function -> FUNCTION function_signature block .)
    FUNCTION        reduce using rule 6 (function -> FUNCTION function_signature block .)


state 34

    (28) block -> LBRACE . block2 RBRACE
    (29) block2 -> . block3
    (30) block2 -> . empty
    (31) block3 -> . statement block2
    (124) empty -> .
    (32) statement -> . special_func
    (33) statement -> . assingation
    (34) statement -> . for
    (35) statement -> . do_while
    (36) statement -> . while
    (37) statement -> . if_else
    (38) statement -> . invocation
    (39) statement -> . if
    (40) statement -> . print
    (41) statement -> . read
    (42) special_func -> . gen_key
    (43) special_func -> . encrypt
    (44) special_func -> . decrypt
    (45) special_func -> . sha_256
    (46) special_func -> . random_salt
    (47) special_func -> . hmac
    (88) assingation -> . variable ASSIGN expression SEMICOLON
    (57) for -> . FOR LPAREN ID for_1 ASSIGN expression for_2 FROM expression RPAREN for_3 DO block for_4
    (56) do_while -> . DO breadcrumb block WHILE LPAREN expression RPAREN gotot SEMICOLON
    (62) while -> . WHILE breadcrumb LPAREN expression RPAREN gotof block
    (65) if_else -> . IF LPAREN expression RPAREN gotof block ELSE goto block
    (71) invocation -> . ID invocation_1 LPAREN invocation_2 expressions RPAREN invocation_5 SEMICOLON invocation_6
    (64) if -> . IF LPAREN expression RPAREN gotof block
    (83) print -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (54) read -> . READ LPAREN ID RPAREN SEMICOLON
    (51) gen_key -> . GENKEY LPAREN RPAREN SPECIAL ID SEMICOLON
    (52) encrypt -> . ENCRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (53) decrypt -> . DECRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (50) sha_256 -> . SHA_256 LPAREN ID RPAREN SPECIAL ID SEMICOLON
    (49) random_salt -> . RANDOM_SALT LPAREN CTEI RPAREN SPECIAL ID SEMICOLON
    (48) hmac -> . HMAC LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (21) variable -> . ID
    (22) variable -> . ID LBRACK expression RBRACK
    (23) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK

    RBRACE          reduce using rule 124 (empty -> .)
    FOR             shift and go to state 62
    DO              shift and go to state 64
    WHILE           shift and go to state 65
    IF              shift and go to state 66
    ID              shift and go to state 63
    PRINT           shift and go to state 67
    READ            shift and go to state 68
    GENKEY          shift and go to state 69
    ENCRYPT         shift and go to state 70
    DECRYPT         shift and go to state 71
    SHA_256         shift and go to state 72
    RANDOM_SALT     shift and go to state 73
    HMAC            shift and go to state 74

    block2                         shift and go to state 41
    block3                         shift and go to state 42
    empty                          shift and go to state 43
    statement                      shift and go to state 44
    special_func                   shift and go to state 45
    assingation                    shift and go to state 46
    for                            shift and go to state 47
    do_while                       shift and go to state 48
    while                          shift and go to state 49
    if_else                        shift and go to state 50
    invocation                     shift and go to state 51
    if                             shift and go to state 52
    print                          shift and go to state 53
    read                           shift and go to state 54
    gen_key                        shift and go to state 55
    encrypt                        shift and go to state 56
    decrypt                        shift and go to state 57
    sha_256                        shift and go to state 58
    random_salt                    shift and go to state 59
    hmac                           shift and go to state 60
    variable                       shift and go to state 61

state 35

    (7) function_signature -> simple_type ID . function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
    (10) function_1 -> . empty
    (124) empty -> .

    LPAREN          reduce using rule 124 (empty -> .)

    function_1                     shift and go to state 75
    empty                          shift and go to state 76

state 36

    (8) function_signature -> VOID ID . function_1 LPAREN open_var_declaration parameters close_var_declaration RPAREN var_declarations
    (10) function_1 -> . empty
    (124) empty -> .

    LPAREN          reduce using rule 124 (empty -> .)

    function_1                     shift and go to state 77
    empty                          shift and go to state 76

state 37

    (16) var_declaration -> VARIABLE open_var_declaration simple_type variables . SEMICOLON close_var_declaration

    SEMICOLON       shift and go to state 78


state 38

    (19) variables -> variable .
    (20) variables -> variable . COMMA variables

    SEMICOLON       reduce using rule 19 (variables -> variable .)
    COMMA           shift and go to state 79


state 39

    (21) variable -> ID .
    (22) variable -> ID . LBRACK expression RBRACK
    (23) variable -> ID . LBRACK expression RBRACK LBRACK expression RBRACK

    COMMA           reduce using rule 21 (variable -> ID .)
    SEMICOLON       reduce using rule 21 (variable -> ID .)
    LBRACK          shift and go to state 80


state 40

    (11) main -> MAIN LPAREN RPAREN . main_scope var_declarations block
    (12) main_scope -> . empty
    (124) empty -> .

    VARIABLE        reduce using rule 124 (empty -> .)
    LBRACE          reduce using rule 124 (empty -> .)

    main_scope                     shift and go to state 81
    empty                          shift and go to state 82

state 41

    (28) block -> LBRACE block2 . RBRACE

    RBRACE          shift and go to state 83


state 42

    (29) block2 -> block3 .

    RBRACE          reduce using rule 29 (block2 -> block3 .)


state 43

    (30) block2 -> empty .

    RBRACE          reduce using rule 30 (block2 -> empty .)


state 44

    (31) block3 -> statement . block2
    (29) block2 -> . block3
    (30) block2 -> . empty
    (31) block3 -> . statement block2
    (124) empty -> .
    (32) statement -> . special_func
    (33) statement -> . assingation
    (34) statement -> . for
    (35) statement -> . do_while
    (36) statement -> . while
    (37) statement -> . if_else
    (38) statement -> . invocation
    (39) statement -> . if
    (40) statement -> . print
    (41) statement -> . read
    (42) special_func -> . gen_key
    (43) special_func -> . encrypt
    (44) special_func -> . decrypt
    (45) special_func -> . sha_256
    (46) special_func -> . random_salt
    (47) special_func -> . hmac
    (88) assingation -> . variable ASSIGN expression SEMICOLON
    (57) for -> . FOR LPAREN ID for_1 ASSIGN expression for_2 FROM expression RPAREN for_3 DO block for_4
    (56) do_while -> . DO breadcrumb block WHILE LPAREN expression RPAREN gotot SEMICOLON
    (62) while -> . WHILE breadcrumb LPAREN expression RPAREN gotof block
    (65) if_else -> . IF LPAREN expression RPAREN gotof block ELSE goto block
    (71) invocation -> . ID invocation_1 LPAREN invocation_2 expressions RPAREN invocation_5 SEMICOLON invocation_6
    (64) if -> . IF LPAREN expression RPAREN gotof block
    (83) print -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (54) read -> . READ LPAREN ID RPAREN SEMICOLON
    (51) gen_key -> . GENKEY LPAREN RPAREN SPECIAL ID SEMICOLON
    (52) encrypt -> . ENCRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (53) decrypt -> . DECRYPT LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (50) sha_256 -> . SHA_256 LPAREN ID RPAREN SPECIAL ID SEMICOLON
    (49) random_salt -> . RANDOM_SALT LPAREN CTEI RPAREN SPECIAL ID SEMICOLON
    (48) hmac -> . HMAC LPAREN ID COMMA ID RPAREN SPECIAL ID SEMICOLON
    (21) variable -> . ID
    (22) variable -> . ID LBRACK expression RBRACK
    (23) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK

    RBRACE          reduce using rule 124 (empty -> .)
    FOR             shift and go to state 62
    DO              shift and go to state 64
    WHILE           shift and go to state 65
    IF              shift and go to state 66
    ID              shift and go to state 63
    PRINT           shift and go to state 67
    READ            shift and go to state 68
    GENKEY          shift and go to state 69
    ENCRYPT         shift and go to state 70
    DECRYPT         shift and go to state 71
    SHA_256         shift and go to state 72
    RANDOM_SALT     shift and go to state 73
    HMAC            shift and go to state 74

    statement                      shift and go to state 44
    block2                         shift and go to state 84
    block3                         shift and go to state 42
    empty                          shift and go to state 43
    special_func                   shift and go to state 45
    assingation                    shift and go to state 46
    for                            shift and go to state 47
    do_while                       shift and go to state 48
    while                          shift and go to state 49
    if_else                        shift and go to state 50
    invocation                     shift and go to state 51
    if                             shift and go to state 52
    print                          shift and go to state 53
    read                           shift and go to state 54
    gen_key                        shift and go to state 55
    encrypt                        shift and go to state 56
    decrypt                        shift and go to state 57
    sha_256                        shift and go to state 58
    random_salt                    shift and go to state 59
    hmac                           shift and go to state 60
    variable                       shift and go to state 61

state 45

    (32) statement -> special_func .

    FOR             reduce using rule 32 (statement -> special_func .)
    DO              reduce using rule 32 (statement -> special_func .)
    WHILE           reduce using rule 32 (statement -> special_func .)
    IF              reduce using rule 32 (statement -> special_func .)
    ID              reduce using rule 32 (statement -> special_func .)
    PRINT           reduce using rule 32 (statement -> special_func .)
    READ            reduce using rule 32 (statement -> special_func .)
    GENKEY          reduce using rule 32 (statement -> special_func .)
    ENCRYPT         reduce using rule 32 (statement -> special_func .)
    DECRYPT         reduce using rule 32 (statement -> special_func .)
    SHA_256         reduce using rule 32 (statement -> special_func .)
    RANDOM_SALT     reduce using rule 32 (statement -> special_func .)
    HMAC            reduce using rule 32 (statement -> special_func .)
    RBRACE          reduce using rule 32 (statement -> special_func .)


state 46

    (33) statement -> assingation .

    FOR             reduce using rule 33 (statement -> assingation .)
    DO              reduce using rule 33 (statement -> assingation .)
    WHILE           reduce using rule 33 (statement -> assingation .)
    IF              reduce using rule 33 (statement -> assingation .)
    ID              reduce using rule 33 (statement -> assingation .)
    PRINT           reduce using rule 33 (statement -> assingation .)
    READ            reduce using rule 33 (statement -> assingation .)
    GENKEY          reduce using rule 33 (statement -> assingation .)
    ENCRYPT         reduce using rule 33 (statement -> assingation .)
    DECRYPT         reduce using rule 33 (statement -> assingation .)
    SHA_256         reduce using rule 33 (statement -> assingation .)
    RANDOM_SALT     reduce using rule 33 (statement -> assingation .)
    HMAC            reduce using rule 33 (statement -> assingation .)
    RBRACE          reduce using rule 33 (statement -> assingation .)


state 47

    (34) statement -> for .

    FOR             reduce using rule 34 (statement -> for .)
    DO              reduce using rule 34 (statement -> for .)
    WHILE           reduce using rule 34 (statement -> for .)
    IF              reduce using rule 34 (statement -> for .)
    ID              reduce using rule 34 (statement -> for .)
    PRINT           reduce using rule 34 (statement -> for .)
    READ            reduce using rule 34 (statement -> for .)
    GENKEY          reduce using rule 34 (statement -> for .)
    ENCRYPT         reduce using rule 34 (statement -> for .)
    DECRYPT         reduce using rule 34 (statement -> for .)
    SHA_256         reduce using rule 34 (statement -> for .)
    RANDOM_SALT     reduce using rule 34 (statement -> for .)
    HMAC            reduce using rule 34 (statement -> for .)
    RBRACE          reduce using rule 34 (statement -> for .)


state 48

    (35) statement -> do_while .

    FOR             reduce using rule 35 (statement -> do_while .)
    DO              reduce using rule 35 (statement -> do_while .)
    WHILE           reduce using rule 35 (statement -> do_while .)
    IF              reduce using rule 35 (statement -> do_while .)
    ID              reduce using rule 35 (statement -> do_while .)
    PRINT           reduce using rule 35 (statement -> do_while .)
    READ            reduce using rule 35 (statement -> do_while .)
    GENKEY          reduce using rule 35 (statement -> do_while .)
    ENCRYPT         reduce using rule 35 (statement -> do_while .)
    DECRYPT         reduce using rule 35 (statement -> do_while .)
    SHA_256         reduce using rule 35 (statement -> do_while .)
    RANDOM_SALT     reduce using rule 35 (statement -> do_while .)
    HMAC            reduce using rule 35 (statement -> do_while .)
    RBRACE          reduce using rule 35 (statement -> do_while .)


state 49

    (36) statement -> while .

    FOR             reduce using rule 36 (statement -> while .)
    DO              reduce using rule 36 (statement -> while .)
    WHILE           reduce using rule 36 (statement -> while .)
    IF              reduce using rule 36 (statement -> while .)
    ID              reduce using rule 36 (statement -> while .)
    PRINT           reduce using rule 36 (statement -> while .)
    READ            reduce using rule 36 (statement -> while .)
    GENKEY          reduce using rule 36 (statement -> while .)
    ENCRYPT         reduce using rule 36 (statement -> while .)
    DECRYPT         reduce using rule 36 (statement -> while .)
    SHA_256         reduce using rule 36 (statement -> while .)
    RANDOM_SALT     reduce using rule 36 (statement -> while .)
    HMAC            reduce using rule 36 (statement -> while .)
    RBRACE          reduce using rule 36 (statement -> while .)


state 50

    (37) statement -> if_else .

    FOR             reduce using rule 37 (statement -> if_else .)
    DO              reduce using rule 37 (statement -> if_else .)
    WHILE           reduce using rule 37 (statement -> if_else .)
    IF              reduce using rule 37 (statement -> if_else .)
    ID              reduce using rule 37 (statement -> if_else .)
    PRINT           reduce using rule 37 (statement -> if_else .)
    READ            reduce using rule 37 (statement -> if_else .)
    GENKEY          reduce using rule 37 (statement -> if_else .)
    ENCRYPT         reduce using rule 37 (statement -> if_else .)
    DECRYPT         reduce using rule 37 (statement -> if_else .)
    SHA_256         reduce using rule 37 (statement -> if_else .)
    RANDOM_SALT     reduce using rule 37 (statement -> if_else .)
    HMAC            reduce using rule 37 (statement -> if_else .)
    RBRACE          reduce using rule 37 (statement -> if_else .)


state 51

    (38) statement -> invocation .
